Mudança de layout para Design Fluido

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	<title>MailSwift</title>
 	<script src="https://kit.fontawesome.com/4d9a4abad5.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="src/css/style.css">
+	<!-- <link rel="stylesheet" href="src/css/responsive.css"> -->
 	<link rel="icon" href="src/img/paper-plane.svg">
 </head>
 
 <body>
-
 	<div class="background">
 		<span></span>
 		<span></span>
@@ -25,34 +25,26 @@
 		<span></span>
 		<span></span>
 	 </div>
-
 	<div class="wrapper">
 		<form action="">
 			<h1>MailSwift <i class="fa-regular fa-paper-plane" style="color: #ffffff;"></i> </h1>
-
 			<div class="input-box">
-				<!-- <label for="para">Para</label> -->
-				<input id="para" type="text" placeholder="exemplo@mail.com" required>
+				<input id="para" type="text" placeholder="E-mail do destinatário" required>
 				<i class="fa-solid fa-envelope"></i>
 			</div>
-			
 			<div class="input-box">
-				<!-- <label for="assunto">Assunto</label> -->
 				<input type="text" placeholder="Assundo do e-mail" required>
 				<i class="fa-solid fa-pen"></i>
 			</div>
-			
 			<div class="input-box">
-				<!-- <label for="mensagem">Mensagem</label> -->
 				<textarea id="mensagem" placeholder="Escreva seu e-mail."></textarea>
 			</div>
-
 			<div class="box-btn">
 				<button type="submit" class="btn">Enviar Mensagem</button>
 			</div>
-
 		</form>
 	</div>
 
 </body>
-		</html>
+
+</html>
